# Naive-weighted-sum-Orchestrator

./: LICENSE  README.md  pyproject.toml  run_agents.py
aggresive_agent/: agent.py  prompt.py  tools.py
conservative_agent/: agent.py  prompt.py  tools.py
orchestator/: .env.example  agent.py  prompts.py
